IE compatibility fixed, added larger/smaller buttons, had a hell of a time with the CSS, added auto-tagging of category/sub-category.  Fixed a bug on IE where an input element cannot have newline characters, so had to put in a hack to know where newlines should go and then serverside put them back in.

--- a/interactive_samples/codemirror/css/jscolors.css
+++ b/interactive_samples/codemirror/css/jscolors.css
@@ -6,7 +6,7 @@
   color: black;
   background-color: #EBEBEB;
   padding: 0;
-  border-top: 1px solid #ABABAB;
+  /*border-top: 1px solid #ABABAB;*/
 }
 
 pre.code, .editbox {
